# cinematickets

./: README.md  docker-compose.yml
cinematickets-api/: .env  Cargo.toml
cinematickets-api/migrations/2021-12-13-015419_create_cities/: down.sql  up.sql
cinematickets-api/migrations/2021-12-13-023007_create_movies/: down.sql  up.sql
cinematickets-api/migrations/2021-12-13-024027_create-cinemaplaces/: down.sql  up.sql
cinematickets-api/migrations/2021-12-13-024847_create-cinemarooms/: down.sql  up.sql
cinematickets-api/migrations/2021-12-13-030456_create-cinemasessions/: down.sql  up.sql
cinematickets-api/src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
